--- a/PrivateMail/Resourses/Themes/Dark.plist
+++ b/PrivateMail/Resourses/Themes/Dark.plist
@@ -24,5 +24,7 @@
     <string>#141414</string>
     <key>OnSurfaceSeparatorColor</key>
     <string>#333333</string>
+	<key>OnSurfaceActivityIndicatorStyle</key>
+	<string>white</string>
 </dict>
 </plist>
